--- a/UBWebsite/prepros-6.config
+++ b/UBWebsite/prepros-6.config
@@ -33,7 +33,7 @@
         "scss/_contact.scss",
         "scss/_chart.scss",
         "scss/_portfolio.scss",
-        "scss/_blog.scss",
+        "scss/_intro.scss",
         "scss/_footer.scss"
       ]
     }
