--- a/energy/package.json
+++ b/energy/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "element-ui": "^2.13.0",
+    "serve": "^11.3.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
