--- a/energy/package.json
+++ b/energy/package.json
@@ -13,13 +13,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^5.0.0",
     "element-ui": "^2.13.0",
     "serve": "^11.3.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.21.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
